--- a/index.html
+++ b/index.html
@@ -17,51 +17,62 @@
         </div>
     </div> -->
 
+    <div class="lampsTop"></div>
+    <div class="lampsRight"></div>
+    <div class="lampsBottom"></div>
+    <div class="lampsLeft"></div>
+
     <div class="tab-buttons">
-      <button id="crazyCubeButton" data-target="crazyCube">Crazy Cube</button>
-      <button id="oneArmedBanditButton" data-target="oneArmedBandit">
+      <button id="crazyCubeButton" class="button" data-target="crazyCube">Crazy Cube</button>
+      <button id="oneArmedBanditButton" class="button" data-target="oneArmedBandit">
         One Armed Bandit
       </button>
-      <button id="rouletteButton" data-target="roulette">Roulette</button>
+      <button id="rouletteButton" class="button" data-target="roulette">Roulette</button>
     </div>
 
     <div id="crazyCube" class="tab">
       <h2>Crazy Cube</h2>
 
-      <button id="startButton">Start</button>
-      <div class="cube" id="cube">
-        <div class="face front">
-          <div class="dot"></div>
-        </div>
-        <div class="face back">
-          <div class="dot"></div>
-          <div class="dot"></div>
-        </div>
-        <div class="face right">
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-        </div>
-        <div class="face left">
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-        </div>
-        <div class="face top">
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-        </div>
-        <div class="face bottom">
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
+      <div class="game-wrap">
+        <div class="cube-place">
+          <div class="cube-wrap">
+            <div class="cube" id="cube">
+              <div class="face front">
+                <div class="dot"></div>
+              </div>
+              <div class="face back">
+                <div class="dot"></div>
+                <div class="dot"></div>
+              </div>
+              <div class="face right">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+              </div>
+              <div class="face left">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+              </div>
+              <div class="face top">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+              </div>
+              <div class="face bottom">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+              </div>
+            </div>
+          </div>
+          <button id="startButton" class="button">Start</button>
         </div>
       </div>
     </div>
@@ -80,5 +91,6 @@
     <script src="js/common/tabs.js"></script>
     <script src="js/common/modals.js"></script>
     <script src="js/games/crazyCube.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
