Add coubes for bet

--- a/index.html
+++ b/index.html
@@ -34,48 +34,66 @@
 
     <div class="tab-content">
       <div id="crazyCube" class="tab">
-        <div class="game-wrap">
-          <div class="cube-place">
-            <div class="cube-wrap">
-              <div class="cube" id="cube">
-                <div class="face front">
-                  <div class="dot"></div>
-                </div>
-                <div class="face back">
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                </div>
-                <div class="face right">
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                </div>
-                <div class="face left">
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                </div>
-                <div class="face top">
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                </div>
-                <div class="face bottom">
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                  <div class="dot"></div>
-                  <div class="dot"></div>
+        <div class="flex">
+          <div class="game-wrap">
+            <div class="cube-place">
+              <div class="cube-wrap">
+                <div class="cube" id="cube">
+                  <div class="face front">
+                    <div class="dot"></div>
+                  </div>
+                  <div class="face back">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                  </div>
+                  <div class="face right">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                  </div>
+                  <div class="face left">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                  </div>
+                  <div class="face top">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                  </div>
+                  <div class="face bottom">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                  </div>
                 </div>
               </div>
+              <button id="startButton" class="button">Start</button>
             </div>
-            <button id="startButton" class="button">Start</button>
+          </div>
+          <div class="bets-wrap">
+            <div class="bets">
+              <div>1</div>
+              <div>2</div>
+              <div>3</div>
+              <div>4</div>
+              <div>5</div>
+              <div>6</div>
+            </div>
+
+            <div class="data">
+              <div>Your bid:<span class="bid">10</span></div>
+              <div>Your potential winnings:<span class="winnings">1000</span></div>
+            </div>
           </div>
         </div>
+        
       </div>
   
       <div id="oneArmedBandit" class="tab">
