--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="content">
       <div class="content-bg">
-        <div id="myModal" class="modal">
+        <div id="modal" class="modal">
           <div class="modal-content">
             <span class="modal-close">&times;</span>
             <h2>Add Deposit</h2>
@@ -147,9 +147,9 @@
           <div class="wallet-container">
             <h2>Wallet</h2>
             <div class="balance">
-              Balance: <span id="balance-amount"></span>
+              Balance: <span id="balance-amount"></span> UAH <span id="usd-id"></span>
             </div>
-            <button id="add-funds" class="modal-trigger" data-target="myModal">
+            <button id="add-funds" class="modal-trigger" data-target="modal">
               Deposit
             </button>
             <button id="withdraw-funds">Withdraw</button>
