Updated bets header

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 </div>
               </div>
               <div class="bets-wrap">
+                <h2>Choose one number</h2>
                 <div class="bets">
                   <div class="btn" data-number="1">1</div>
                   <div class="btn" data-number="2">2</div>
@@ -130,16 +131,16 @@
           <div id="roulette" class="tab">
             <div class="flex">
               <div class="game-wrap">
-                <p>Описание игры Roulette</p>
+                
               </div>
               <div class="bets-wrap">
 
-                <div class="data">
+                <!-- <div class="data">
                   <div>Your bid:<span class="bid">10</span></div>
                   <div>
                     Your potential winnings:<span class="winnings">1000</span>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
